force-app/main/default/objects/Rep_Location_Snapshot__c/Rep_Location_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Rep Location Snapshot</label>
    <nameField>
        <displayFormat>RLS-{00000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Location Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>