force-app/main/default/objects/Rep_Location_Snapshot__c/fields/Accuracy_Meters__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Meters__c</fullName>
    <label>Accuracy Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>