force-app/main/default/objects/Rep_Location_Snapshot__c/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>