force-app/main/default/objects/Rep_Location_Snapshot__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>