force-app/main/default/objects/Rep_Location_Snapshot__c/fields/Device_Model__c.field-meta.xml
<CustomField>
    <fullName>Device_Model__c</fullName>
    <label>Device Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>