force-app/main/default/objects/Rep_Location_Snapshot__c/fields/Is_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Is_Sharing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sharing</label>
    <type>Checkbox</type>
</CustomField>