force-app/main/default/objects/Rep_Location_Snapshot__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Rep Location Snapshots</relationshipLabel>
    <relationshipName>Rep_Location_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>